--- a/src/main/resources/com/jenus/bmfs/css/Buttons.css
+++ b/src/main/resources/com/jenus/bmfs/css/Buttons.css
@@ -86,6 +86,14 @@
     /*-fx-font-size: */
 }
 
+.btn-image {
+    -fx-border-radius: 50%;
+    -fx-min-width: 140px;
+    -fx-min-height: 140px;
+    -fx-background-radius: 50%;
+    -fx-border-color: -bs-gray-500;
+}
+
 .btn-lg {
     -fx-min-width: 110px;
     -fx-min-height: 40px;
